--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "import-dict": "tsx scripts/import-dictionary.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "^14.0.0",
@@ -15,15 +14,12 @@
     "react-dom": "^18.2.0",
     "openai": "^4.20.0",
     "lucide-react": "^0.294.0",
-    "framer-motion": "^10.16.4",
-    "better-sqlite3": "^9.2.2"
+    "framer-motion": "^10.16.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/better-sqlite3": "^7.6.8",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "tailwindcss": "^3.3.6",
     "postcss": "^8.4.32",
